.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__Employee_Snapshot__c.object
<CustomObject>
    <description>Used for snapshot reports vs individual employees</description>
    <fields>
        <fullName>xcdhcm__Annual_salary__c</fullName>
        <label>Annual salary</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Company__c</fullName>
        <label>Company</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Contractual_hours__c</fullName>
        <label>Contractual hours</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__DOB__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Department__c</fullName>
        <label>Organisation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Division__c</fullName>
        <label>Division</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employee__c</fullName>
        <label>Employee</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employment_status__c</fullName>
        <label>Employment status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employment_type__c</fullName>
        <label>Employment type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__FTE__c</fullName>
        <label>FTE%</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Gender__c</fullName>
        <label>Gender</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Hourly_rate_of_pay__c</fullName>
        <label>Hourly rate of pay</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Hours_remaining__c</fullName>
        <label>Hours remaining</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Is_Manager__c</fullName>
        <label>Is Manager</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Job_title__c</fullName>
        <label>Job title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Leave_remaining__c</fullName>
        <label>Leave remaining</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Leaving_date__c</fullName>
        <label>Leaving date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Manager__c</fullName>
        <label>Manager</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Nationality__c</fullName>
        <label>Nationality</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Org_Department__c</fullName>
        <label>Department</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Organisation_type__c</fullName>
        <label>Organisation type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Sick_days_last_12_months__c</fullName>
        <label>Sick days - last 12 months</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Start_date__c</fullName>
        <label>Start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Team__c</fullName>
        <label>Team</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Work_pattern__c</fullName>
        <label>Pattern type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Snapshot Employee</label>
    <nameField>
        <label>Employee snapshot</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Snapshot Employee</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>